# Directory-Scanner

./: CMakeLists.txt  README.md  main.cpp
Generators/: CsvGenerator.h  TxtGenerator.h
aggregators/: AmountAggregator.cpp  AmountAggregator.h  AveragePriceAggregator.cpp  AveragePriceAggregator.h  CategoryAggregator.cpp  CategoryAggregator.h  CostAggregator.cpp  CostAggregator.h  NameAggregator.cpp  NameAggregator.h
collectors/: CsvFileCollector.cpp  CsvFileCollector.h  TxtFileCollector.cpp  TxtFileCollector.h
controllers/: ApplicationController.cpp  ApplicationController.h
csv/: CsvProcessor.h  Product.h
data/: Products_1.csv  Products_2.csv  data_1.txt  data_2.txt
engine/: AnalyzerEngine.h
globals/: Globals.h  includes.h
interfaces/: IAggregator.h  IFileCollector.h  IFileProcessor.h  IReportGenerator.h  ITextSource.h
managers/: AggregationManager.cpp  AggregationManager.h  DictionaryManager.cpp  DictionaryManager.h  ProductManager.cpp  ProductManager.h
output/: product_report.txt  words_report.txt
sources/: FileCsvSource.h  FileTextSource.h
text/: Sanitizer.cpp  Sanitizer.h  TextProcessor.h  WordEntry.h
